# fdf

./: .gitmodules  CMakeLists.txt  Makefile  README.md  debug  fdf  main.c  outd1  picture
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-build/libft/: Makefile  cmake_install.cmake
incs/: fdf.h  keys.h
maps/: 10-2.fdf  10-70.fdf  20-60.fdf  42.fdf  pyramide.fdf
srcs/: color.c  draw_line.c  draw_window.c  drawing.c  error.c  fdf.c  init.c  key_handler.c  key_handler_linux.c  key_handler_mac_os.c  main.c  projection.c  read_file.c  rotation_matrix.c  utilities.c
